[package]
name = "credence_delegation"
version = "0.1.0"
edition = "2021"
description = "Credence delegation contract — delegate attestation and management rights"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
credence_errors = { path = "../credence_errors" }

[dev-dependencies]
insta = { version = "1.34", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
